Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.8, 5.9, 5.12.4
-
Fix Version/s: 5.15.2
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Platform/s:
-
Commits:048e66a11d87845eaba9e8cf23de3fb4acac924d
Description
Can be easily reproduced with QtCreator 4.9.2 Based on Qt 5.12.4 (Clang 10.0 (Apple), 64 bit)
Right click anywhere to open context menu. Then click minimize button in window title. Window is minimized and menu stays on screen.
Attachments
For Gerrit Dashboard: QTBUG-77833 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
272044,5 | Close popups on windowWillMiniaturize notification | dev | qt/qtbase | Status: MERGED | +2 | 0 |
315994,2 | Close popups on windowWillMiniaturize notification | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
371142,3 | macOS: Remove duplicate code closing popups on window interaction | dev | qt/qtbase | Status: MERGED | +2 | 0 |