src/plugins/platforms/cocoa/qcocoaintegration.h
@@ -128,6 +128,8 @@ public:
 
     void beep() const override;
 
+    void closePopups(QWindow *forWindow = nullptr);
+
 private Q_SLOTS:
     void focusWindowChanged(QWindow *);
 
