src/plugins/platforms/cocoa/qcocoawindow.mm
@@ -71,14 +71,6 @@ enum {
     defaultWindowHeight = 160
 };
 
-static void qt_closePopups()
-{
-    while (QCocoaWindow *popup = QCocoaIntegration::instance()->popPopupWindow()) {
-        QWindowSystemInterface::handleCloseEvent(popup->window());
-        QWindowSystemInterface::flushWindowSystemEvents();
-    }
-}
-
 Q_LOGGING_CATEGORY(lcCocoaNotifications, "qt.qpa.cocoa.notifications");
 
 static void qRegisterNotificationCallbacks()
@@ -832,6 +824,11 @@ void QCocoaWindow::windowDidExitFullScreen()
     }
 }
 
+void QCocoaWindow::windowWillMiniaturize()
+{
+    QCocoaIntegration::instance()->closePopups(window());
+}
+
 void QCocoaWindow::windowDidMiniaturize()
 {
     if (!isContentView())
@@ -1169,7 +1166,7 @@ void QCocoaWindow::viewDidChangeGlobalFrame()
 void QCocoaWindow::windowWillMove()
 {
     // Close any open popups on window move
-    qt_closePopups();
+    QCocoaIntegration::instance()->closePopups();
 }
 
 void QCocoaWindow::windowDidMove()
@@ -1302,7 +1299,7 @@ void QCocoaWindow::windowWillClose()
 {
     // Close any open popups on window closing.
     if (window() && !windowIsPopupType(window()->type()))
-        qt_closePopups();
+        QCocoaIntegration::instance()->closePopups();
 }
 
 // ----------------------- NSWindowDelegate callbacks -----------------------
